--- a/style.css
+++ b/style.css
@@ -12,14 +12,19 @@
     --danmuku-container-height: 350px;  
     --danmuku-size: 22px;
     --danmuku-duration: 16s;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 
 .video-container{
-    width: var(--video-width);
-    height: var(--video-height);
+    /* width: var(--video-width);
+    height: var(--video-height); */
+    width: 100%;
+    height: 100%;
     background: black;
     position: relative;
+    overflow: hidden;
     z-index: 900;
     border-top: 20px solid black;
     border-bottom: 20px solid black;
@@ -31,8 +36,10 @@
 }
 
 .danmuku-container{
-    width: var(--video-width);
-    height: var(--danmuku-container-height);
+    /* width: var(--video-width);
+    height: var(--danmuku-container-height); */
+    width: 98%;
+    height: 100%;
     /* background: rgba(236, 229, 195, 1); */
     margin: 15px auto 0;
     display: flex;
@@ -85,6 +92,11 @@
     z-index: 1100;
     position: absolute;    
 
+    /* avoid automatic line break*/
+    white-space: pre;
+    word-break: normal;
+    word-wrap: normal;
+
     /* disable danmuku selection */
     animation-play-state: running;
     -webkit-touch-callout: none; /* iOS Safari */
@@ -102,12 +114,18 @@
 
 .rolling{
     animation: scrollTo linear forwards;
-    animation-duration: var(--danmuku-duration);
+    animation-duration: 8s;
 }
 
 @keyframes scrollTo {
-    from{transform: translateX(var(--video-width))}
-    to{transform: translateX(-1300px)}
+    /* from{transform: translateX(var(--video-width))}
+    to{transform: translateX(-1300px)} */
+    from {
+        margin-left: 100%;
+      }
+      to {
+        margin-left: -20%;
+      }
 }
 
 .ceiling{
