--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     --video-height: 339px; 
     /* danmuku-container-width = video-width
        danmuku-container-height = 0.5 * video-height */
-    --danmuku-container-height: 506px;  
+    --danmuku-container-height: 550px;  
     --danmuku-size: 22px;
     --danmuku-opacity: 0.7;
     --danmuku-duration: 10s;
@@ -18,7 +18,6 @@
     /* overflow-y: scroll;
     overflow-x: hidden; */
 }
-
 
 .video-container{
     /* width: var(--video-width);
@@ -33,17 +32,24 @@
     border-bottom: 20px solid black;
 }
 
-.b-video{
+#b-video{
+    width: 100%; 
+    height: 100%; 
+    outline: none;
     z-index: 900;
+}
+
+.video-controls{
+    position: relative;
+    z-index: 1500;
 }
 
 .danmuku-container{
     /* width: var(--video-width);
     height: var(--danmuku-container-height); */
-    width: 98%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     /* background: rgba(236, 229, 195, 1); */
-    margin: 15px auto 0;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -51,6 +57,7 @@
     position: absolute;
     z-index: 1000;
 }
+
 
 /* maybe no need for .track */
 .track{
@@ -64,6 +71,7 @@
     font-weight: bold; 
     color: grey;
     font-size: 15px;
+    position: relative;
 }
 
 .danmuku{
