--- a/style.css
+++ b/style.css
@@ -19,29 +19,74 @@
     overflow-x: hidden; */
 }
 
+#player-wrapper {
+    position: relative;
+}
+
+#danmuku-player {
+    position: absolute;
+    z-index: 1000;
+    overflow: hidden;
+  }
+
 .video-container{
     /* width: var(--video-width);
     height: var(--video-height); */
-    width: 100%;
     height: 100%;
-    background: black;
     position: relative;
-    overflow: hidden;
-    z-index: 900;
-    border-top: 20px solid black;
-    border-bottom: 20px solid black;
+    z-index: 1200;
+    background: black;
 }
 
 #b-video{
-    width: 100%; 
     height: 100%; 
     outline: none;
-    z-index: 900;
+    z-index: 1100;
 }
 
-.video-controls{
+#video-controls{
+    position: absolute;
+    bottom: -30px;
+    left: -2px;
+    right: -2px;
+    height: 60px;
+    z-index: 1300;
+    padding-top: 10px;
+    padding-left: 3px;
+    padding-right: 3px;
+}
+
+/* #video-controls-wrapper {
+    position: absolute;
+    bottom: 0px;
+    left: -2px;
+    right: -2px;
+    height: 60px;
+} */
+
+
+@keyframes out {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
+
+#misc-prompt {
     position: relative;
-    z-index: 1500;
 }
 
 .danmuku-container{
@@ -57,7 +102,6 @@
     position: absolute;
     z-index: 1000;
 }
-
 
 /* maybe no need for .track */
 .track{
@@ -90,6 +134,9 @@
             */
     /* color: rgb(255, 255, 255); */
     width: auto;
+    z-index: 1500;
+    position: absolute;   
+
     font-size: var(--danmuku-size);
     /* background-color: antiquewhite;  */
     font-family: SimHei, 'Microsoft JhengHei', Arial, Helvetica, sans-serif; 
@@ -99,9 +146,7 @@
                 rgb(0, 0, 0) 0px 1px 1px, 
                 rgb(0, 0, 0) 0px -1px 1px, 
                 rgb(0, 0, 0) -1px 0px 1px;
-    z-index: 1100;
-    position: absolute;    
-
+    
     /* avoid automatic line break*/
     white-space: pre;
     word-break: normal;
@@ -152,6 +197,7 @@
     from{}
     to{}
 }
+
 
 
 
